ArgsParser changes + UT

--- a/Dtc.IO.Tests/Dtc.IO.Tests.csproj
+++ b/Dtc.IO.Tests/Dtc.IO.Tests.csproj
@@ -6,11 +6,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6EC47699-A5A2-4F45-8F65-841A3142FA70}</ProjectGuid>
+    <ProjectGuid>{B6A6B9F9-54FF-4AEB-A37E-516E34446259}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dtc.ArgsParser.Tests</RootNamespace>
-    <AssemblyName>Dtc.ArgsParser.Tests</AssemblyName>
+    <RootNamespace>Dtc.IO.Tests</RootNamespace>
+    <AssemblyName>Dtc.IO.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -35,9 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dtc.ArgsParser">
-      <HintPath>..\Dtc.ArgsParser\bin\Debug\Dtc.ArgsParser.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -51,14 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArgsPatserTests.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="!how_to_run_nunit_tests_under_visual_studio2017.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
